# ipakeep

./: CLAUDE.md  Cargo.toml  README.md  deny.toml  tarpaulin.toml
docker/anisette/: Dockerfile  README.md  docker-compose.yml
sbom/: ipakeep.cdx.json  sbomqs-comprehensive.yaml
scripts/: sbom.sh
scripts/frida/: README.md  ipakeep_dump.js  ipakeep_dump.py
skills/ipakeep-cli/: SKILL.md
skills/ipakeep-cli/agents/: openai.yaml
src/: lib.rs  main.rs
src/domain/: error.rs  mod.rs
src/domain/entity/: account.rs  app.rs  download_item.rs  mod.rs  sinf.rs  trusted_phone_number.rs
src/domain/repository/: app_store_repository.rs  credential_repository.rs  fake.rs  mod.rs
src/domain/repository/fake/: app_store.rs  (+1 more)
src/domain/usecase/: auth_info.rs  auth_login.rs  auth_revoke.rs  download.rs  list_versions.rs  log_capture.rs  mod.rs  purchase.rs  search.rs
src/infrastructure/: exec.rs  mod.rs
src/infrastructure/appstore/: authentication.rs  bag.rs  config.rs  mod.rs  store_api.rs  storefront.rs
src/infrastructure/decrypt/: dump.rs  entitlements.rs  ios.rs  macho.rs  mod.rs  tests.rs
src/infrastructure/developer/: client.rs  csr.rs  mod.rs  parsing.rs  request.rs
src/infrastructure/grandslam/: anisette.rs  anisette_docker.rs  aoskit.rs  aoskit_fallback.rs  client.rs  mod.rs  srp.rs  srp_handshake.rs
src/infrastructure/http/: client.rs  mod.rs  plist_codec.rs
src/infrastructure/ipa/: metadata.rs  mod.rs  sinf.rs  tests.rs
src/infrastructure/keychain/: file_keychain.rs  macos_keychain.rs  mod.rs
src/infrastructure/simulator/: device.rs  installer.rs  macho.rs  mod.rs  runtime.rs  tests.rs
src/presentation/: mod.rs
src/presentation/cli/: app.rs  mod.rs  output.rs
tests/: cli.rs  integration_appstore.rs  integration_http.rs
(+39 files in other folders)
